--- a/app/src/main/res/layout/activity_selling.xml
+++ b/app/src/main/res/layout/activity_selling.xml
@@ -6,10 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:orientation="vertical"
         android:padding="20dp">
@@ -26,32 +25,22 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <ProgressBar
+            android:layout_margin="10dp"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <Button
             android:id="@+id/btn_10"
             android:layout_width="match_parent"
             android:textColor="@color/white"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:visibility="invisible"
             android:text="@string/app_name" />
-
-        <Button
-            android:id="@+id/btn_20"
-            android:layout_width="match_parent"
-            android:textColor="@color/white"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="@string/app_name" />
-
-        <Button
-            android:id="@+id/btn_30"
-            android:layout_width="match_parent"
-            android:textColor="@color/white"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="@string/app_name" />
-
 
     </LinearLayout>
-
 
 </ScrollView>
